# findpat

./: LICENSE  README.txt
cop/: cop.bib  cop.tex  dmtcs.cls
findpat/: Makefile.in  autobuild  configure.in  evalrev
findpat/algo/: ._lcp.c  arit_enc.c  arit_enc.h  backsearch.c  backsearch.h  bitarray.h  bittree.c  bittree.h  bwt.c  bwt.h  bwt_joint.c  bwt_joint.h  comprsa.c  comprsa.h  enc.c  enc.h  fastq.h  huffman.c  huffman.h  interv.c  interv.h  klcp.c  klcp.h  lcp.c  lcp.h  longpat.c  longpat.h  lpat.c  lpat.h  lzw.c  lzw.h  mrs.c  mrs_nolcp.c  mrs_nolcp.h  mtf.c  mtf.h  output_callbacks.c  output_callbacks.h  psort.c  psort.h  (+16 more)
findpat/common/: bitstream.c  bitstream.h  common.c  common.h  macros.h  tiempos.c  tiempos.h
findpat/lib/: kpw.c  kpw.h  kpw_check.c  kpw_check.h  kpwapi.c  kpwapi.h  libp2zip.c  libp2zip.h
findpat/pyapi/: Makefile  _template.c  _template.h  kapow.c  kapow.test  kapow.version  karray.c  karray.h  kbacksearch.c  kbacksearch.h  kcallback.c  kcallback.h  kcomprsa.c  kcomprsa.h  kmacros.h  kpwfile.c  kpwfile.h  kranksel.c  kranksel.h  krmq.c  krmq.h  ksaindex.c  ksaindex.h  ktools.py  newobject.py  packcode.sh  py_arit_enc.c  py_bwt.c  py_enc.c  py_fastq.c  py_klcp.c  py_lcp.c  py_mrs.c  py_mtf.c  py_sa_search.c  runmrs.py  runmrsFromFile.py  setup.py
findpat/pyapi/tools/: revcat.py  scatter.py
findpat/test/: stress.c  test.c  test_comprsa.c  test_interv.c  tests_copkpw.py  tests_covlcp.py  tests_mmrs.py  tests_mrs_nolcp.py  tests_obwt.py  tests_runcop.py  tests_search.py
findpat/tools/: allPrefCompl.cpp  biop2zip.c  calck.c  chunksearch.c  copkpw.c  cover2.c  depcloser.cpp  filecop.c  filetags.c  findpat.c  findpatkpw.c  findpatkpw.py  genZl.cpp  gengreedyk.cpp  gengreedyrect.cpp  kapow.c  p2zip.c  patoccs.c  runbacksearch.c  runbwt.c  runcomps_bruteforce.cpp  runcop.c  runcop_bruteforce.cpp  runhistory_bruteforce.cpp  runk_bruteforce.cpp  runk_onefile.cpp  runkinv.c  runlcp.c  runlongpat.c  runmmrs.c  runmmrs_bruteforce.cpp  runmrs.c  runobwt.c  runrf.cpp  runsaindex.c  runsasearch.c  runtags.c  stats.c
findpat/utiles/: Makefile  att.c  check-malloc.py  debruijn.c  defasta.c  dif.c  extract.cpp  genfasta.c  highmtf.c  kpwsmal.py  lowcompl_right.c  lowcomplmrs_left.c  multifasta.c  nsrph.c  nsrph.h  uncover.c
findrepset/: Makefile  README  common.h  filecop.c  output_callbacks.h  tiempos.h
